--- a/package.xml
+++ b/package.xml
@@ -41,6 +41,7 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>ninja-build</build_depend>
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>rospy</depend>
