--- a/package.xml
+++ b/package.xml
@@ -47,6 +47,7 @@
   <depend>rospy</depend>
   <depend>std_msgs</depend>
   <depend>dynamic_reconfigure</depend>
+  <build_depend>curl</build_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
